photo config started on sections

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,33 +1,40 @@
-nav{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  outline: 2px solid black;
+.nav-wrap{
+  position: absolute;
+  z-index: 1;
+  width: 100vw;
+  // outline: 2px solid black;
+  nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    // outline: 2px solid black;
 
-  h1.brand{
-    margin: 0;
-    outline: 2px solid black;
-  }
+    h1.brand{
+      margin: 0;
+    }
 
-  li{
-    list-style: none;
-    margin-bottom: 0;
-  }
-
-  ul.mobile-nav{
-    margin-bottom: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-
-  ul.desktop-nav{
-    margin-bottom: 0;
-    
     li{
-      display: inline;
-      margin-right: 8px;
+      list-style: none;
+      margin-bottom: 0;
+    }
+
+    ul.mobile-nav{
+      margin-bottom: 0;
+      position: absolute;
+      z-index: 1;
+      top: 0;
+      left: 0;
+    }
+
+    ul.desktop-nav{
+      margin-bottom: 0;
+
+      li{
+        font-weight: bold;
+        display: inline;
+        margin-right: 8px;
+      }
     }
   }
 }
