--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,10 @@
 html {
   // background-color: lavenderblush;
 }
+
+.button{
+  color: white;
+  outline: 2px solid white;
+  padding: 1rem 2rem;
+  width: 250px;
+}
