--- a/src/styles/capabilities.scss
+++ b/src/styles/capabilities.scss
@@ -1,40 +1,83 @@
-.capabilities-1{
-  padding: 3rem;
-  h1{
-    color: white ;
-    margin-top: 0;
-    text-align: center;
-  }
-  p{
-    color: grey;
-    text-align: center;
+.capabilities{
+  // padding: 3rem 0;
+  .capabilities-1{
+    padding: 3rem;
+    h1{
+      color: white ;
+      margin-top: 0;
+      text-align: center;
+    }
+    p{
+      color: grey;
+      text-align: center;
+    }
+
+    .button{
+      text-align: center;
+      margin: 0 auto;
+    }
+
+    background-color: black;
   }
 
-  .button{
+  .capabilities-2{
+    display: flex;
+    justify-content: space-between;
+    padding: 3rem;
+    .venn-diagram{
+      // height: 200px;
+      // width: 200px;
+      background-color: orange;
+      border-radius: 50%;
+      flex: 1;
+    }
+    .content{
+      flex: 1;
+      .header{
+        font-size: 1.3rem;
+        margin-bottom: 0;
+      }
+      .body{
+        color: grey;
+      }
+      .content-footer{
+        font-size: 0.6rem;
+      }
+    }
+  }
+  .capabilities-3{
     text-align: center;
-    margin: 0 auto;
-  }
-
-  background-color: black;
-}
-
-.capabilities-2{
-  display: flex;
-  justify-content: space-between;
-  .venn-diagram{
-    // height: 200px;
-    // width: 200px;
-    background-color: orange;
-    flex: 1;
-  }
-  .content{
-    flex: 1;
     .header{
-      font-size: 2rem;
+
     }
     .body{
       color: grey;
+      width: 50%;
+      margin: 0 auto;
     }
+  }
 
+  .call-us-now{
+    color: white;
+    background-color: black;
+    text-align: center;
+    padding: 2rem;
+    .header{
+      font-family: 'Work Sans';
+      position: relative;
+      display: inline-block;
+
+      &::after{
+        content: '';
+        border-bottom: 2px solid white;
+        width: 380px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+      }
+    }
+    .phone-number{
+        font-family: 'Work Sans';
+    }
   }
 }
