--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,3 +8,20 @@ html {
   padding: 1rem 2rem;
   width: 250px;
 }
+
+.content-footer{
+  color: black;
+  // text-decoration: underline;
+  text-transform: uppercase;
+  font-family: 'Work Sans';
+  position: relative;
+
+  &::after{
+    content: '';
+    border-bottom: 2px solid black;
+    width: 250px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+}
