--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,10 +1,58 @@
 .about{
-  text-align: center;
-  .header{
+  text-align: left;
+  background-color: #f9f5f2;
+  padding: 1rem;
 
+  @media only screen and (min-width : 990px) {
+     text-align: left;
   }
-  .body{
-    width: 60%;
-    margin: auto;
+
+  h1.header{
+    margin-top: 3rem;
+    font-size: 3rem;
+    font-weight: 700;
+  }
+
+  .subheader{
+    margin: 0;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
+
+  .content{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    .body {
+      font-size: 1.4rem;
+      text-align: center;
+
+      @media only screen and (min-width : 760px) {
+        min-width: 250px;
+        text-align: left;
+        padding-right:1rem;
+        flex: 1;
+      }
+
+      @media only screen and (min-width : 990px) {
+        order: 1;
+      }
+
+    }
+
+    .about-image{
+      flex:1;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+      @media only screen and (min-width : 760px) {
+        min-width: 560px;
+        max-height: 481px;
+        max-width: 720px;
+      }
+
+      @media only screen and (min-width : 960px) {
+        order: 2;
+      }
+    }
   }
 }
