--- a/src/styles/practiceAreas.scss
+++ b/src/styles/practiceAreas.scss
@@ -8,6 +8,10 @@
     margin-bottom: 2rem;
   }
 
+  a.p-area:hover{
+    text-decoration: none; 
+  }
+
   .box{
     display: flex;
     margin-bottom: 2rem;
