--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -39,12 +39,18 @@
         // display: inline-block;
         // outline: 2px solid white;
         font-weight: bold;
-        ul{
+    
+        ul.desktop-nav{
           margin: 0;
+
           li{
             display: inline;
             margin-right: 16px;
             list-style: none;
+
+            a{
+              color: white;
+            }
           }
         }
       }
