--- a/src/styles/attorneyProfile.scss
+++ b/src/styles/attorneyProfile.scss
@@ -40,23 +40,23 @@
 
   .training{
     grid-area: training;
-    // background-color: red;
+    background-color: #E2DFDE;
   }
   .about{
     grid-area: about;
-    // background-color: blue;
+
   }
   .education{
     grid-area: education;
-    // background-color: green;
+    background-color: #E2DFDE;
   }
   .honors{
     grid-area: honors;
-    // background-color: pink;
+    background-color: #F5F5F7;
   }
   .legal{
     grid-area: legal;
-    // background-color: yellow;
+    background-color: #F9F6F4;
   }
 
 }
