--- a/src/styles/practiceAreas.scss
+++ b/src/styles/practiceAreas.scss
@@ -9,7 +9,7 @@
   }
 
   a.p-area:hover{
-    text-decoration: none; 
+    text-decoration: none;
   }
 
   .box{
@@ -20,7 +20,7 @@
 
     .text{
       flex: 1;
-      background-color: rgb(240, 233, 222);
+      background-color: #F2F1EB;
       padding: 1rem;
       .header{
         margin-bottom: 1rem;
