--- a/src/styles/singlePage.scss
+++ b/src/styles/singlePage.scss
@@ -16,50 +16,114 @@
   }
 
   .wrap{
-    grid-template-columns:
-      minmax(400px, 650px)
-      minmax(400px, 650px);
-    grid-template-areas:
-      "big-para image"
-      "small-para small-para";
+    // grid-template-columns:
+    //   minmax(400px, 500px)
+    //   minmax(400px, 500px);
+    // grid-template-areas:
+    //   "big-para image"
+    //   "small-para small-para";
+    //
+    // grid-auto-rows: minmax(10px, auto);
+    // grid-gap: 1rem;
+    //
+    // @media only screen and (min-width : 600px) {
+    //   display: grid;
+    // }
 
-    grid-auto-rows: minmax(10px, auto);
-    grid-gap: 1rem;
-
-    @media only screen and (min-width : 600px) {
-      display: grid;
-    }
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 
     .image{
-      min-height: 200px;
-      // max-height: 300px;
-      min-width: 200px;
-      // max-width: 300px;
+      // min-height: 200px;
+      // max-height: 600px;
+      // min-width: 500px;
+
+
+      @media only screen and (min-width : 760px) {
+        min-width: 462px;
+        max-height: 481px;
+        max-width: 720px;
+        flex: 1;
+      }
+
+      height: 100%;
+      width: 100%;
+
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      grid-area: image;
+      // grid-area: image;
+      margin-bottom: 3rem;
+
+      // @media only screen and (min-width : 500px) {
+      //   min-width: 300px;
+      // }
     }
 
     .big-para{
-      grid-area: big-para;
-      font-size: 1.2rem;
-      // background-color: red;
-    }
-    .small-para{
-      grid-area: small-para;
+      // grid-area: big-para;
       font-size: 1.2rem;
       margin-bottom: 3rem;
-      // background-color: blue;
-    }
 
+
+
+      @media only screen and (min-width : 760px) {
+        min-width: 400px;
+        text-align: left;
+        padding-right:1rem;
+        flex: 1;
+      }
+    }
 
 
   }
+  .small-para{
+    grid-area: small-para;
+    font-size: 1.3rem;
+    margin-bottom: 5rem;
+  }
+}
 
+.single-page.dui{
+  .big-para{
+    font-size: 1.4rem;
+  }
+  .small-para{
 
+  }
+}
 
+.single-page.domestic-violence{
+  .big-para{
+    font-size: 1.4rem;
+  }
+  .small-para{
 
+  }
+}
 
+.single-page.municipal{
+  .big-para{
+    font-size: 1.4rem;
+  }
+  .small-para{
 
+  }
+}
 
+.single-page.juvenile{
+  .big-para{
+    font-size: 1.4rem;
+  }
+  .small-para{
 
+  }
+}
+
+.single-page.felony{
+  .big-para{
+    font-size: 1.4rem;
+  }
+  .small-para{
+
+  }
 }
