--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,6 +3,7 @@
 html {
   // background-color: lavenderblush;
   // margin: 0;
+   scroll-behavior: smooth;
 }
 
 * { margin:0; padding:0; box-sizing:border-box; }
