--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -5,6 +5,7 @@
 
   h1.header{
     font-size: 3rem;
+    margin-bottom: 1rem;
   }
   .info{
     margin-bottom: 1rem;
@@ -16,6 +17,7 @@
     color: black;
     font-size: 1rem;
     margin-bottom: 1rem;
+    font-size: 1.3rem;
 
     &::before{
       content: 'Email: ';
@@ -27,6 +29,7 @@
 
   .phone{
     margin-bottom: 1rem;
+    font-size: 1.3rem;
     &::before{
       content: 'Phone: ';
       font-weight: bold;
