--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,16 +1,21 @@
 .footer{
-  // padding: 2rem 3rem;
+  padding: 65px 0;
   p{
     margin: 0;
   }
   address{
+    font-size: 22px;
+    line-height: 26px;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: bold;
+    font-style: normal;
     margin: 0 0 1rem;
     // font-style: normal;
   }
   color: white;
   background: black;
   .footer-wrap{
-    padding: 1rem 0;
+    // padding: 1rem 0;
     h1{
       color: white;
       margin: 0;
@@ -25,27 +30,36 @@
 
       @media only screen and (min-width : 1200px){
         display: flex;
-        flex-wrap: wrap;
+        // flex-wrap: wrap;
         justify-content: space-between;
-        align-self: center;
+        align-self: start;
       }
 
       h1.brand{
-        font-size: 1.5rem;
+        font-size: 42px;
+        color: #9fd9c5;
+
+        @media only screen and (min-width : 1200px){
+          text-align: left;
+
+        }
       }
 
 
       nav{
         // display: inline-block;
         // outline: 2px solid white;
-        font-weight: bold;
-    
+        // font-weight: bold;
+        align-items: flex-start ;
+
+
         ul.desktop-nav{
-          margin: 0;
+
 
           li{
-            display: inline;
-            margin-right: 16px;
+                margin: 0;
+            // display: inline;
+            // margin-right: 16px;
             list-style: none;
 
             a{
@@ -70,48 +84,73 @@
         text-align: left;
         display: flex;
         justify-content: space-between;
+        align-self: center;
         // text-align: left;
       }
 
-      .call-us-now-box{
-        display: flex;
-        align-self: center;
-        // width: 30%;
-        justify-content: center;
+      .call-now-box{
+        font-size: 42px;
+        color: #9fd9c5;
+        font-weight: bold;
 
-        text-align: center;
-
-
-
+        .call-now{
+          text-align: right;
+          font-family: 'Work Sans', sans-serif;
+        }
         .phone-number{
-          background-color: rgb(50, 50, 50);
-          padding: 1rem;
-          // flex: 1;
-          text-align: center;
-        }
-        .call-us-now{
-          color: black;
-          background-color: rgb(240, 240, 240);
-          text-align: center;
-          padding: 1rem ;
-          // flex: 1;
+          position: relative;
+          font-family: 'Work Sans', sans-serif;
+          &:after{
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 0;
+            border-bottom: 9px solid #9fd9c5;
+            width: 100%;
+          }
+
         }
       }
 
-      .phone-number-left{
-        display: none;
+      // .call-us-now-box{
+      //   display: flex;
+      //   align-self: center;
+      //   // width: 30%;
+      //   justify-content: center;
+      //
+      //   text-align: center;
+      //
+      //
+      //
+      //   .phone-number{
+      //     background-color: rgb(50, 50, 50);
+      //     padding: 1rem;
+      //     // flex: 1;
+      //     text-align: center;
+      //   }
+      //   .call-us-now{
+      //     color: black;
+      //     background-color: rgb(240, 240, 240);
+      //     text-align: center;
+      //     padding: 1rem ;
+      //     // flex: 1;
+      //   }
+      // }
 
-        @media only screen and (min-width : 1200px){
-          display: block;
-        }
-
-        &::before{
-          content: 'phone: ';
-          font-weight: bold;
-
-        }
-
-      }
+      // .phone-number-left{
+      //   display: none;
+      //
+      //   @media only screen and (min-width : 1200px){
+      //     display: block;
+      //   }
+      //
+      //   &::before{
+      //     content: 'phone: ';
+      //     font-weight: bold;
+      //
+      //   }
+      //
+      // }
 
 
 
@@ -119,11 +158,15 @@
     }
 
     .email{
-      &::before{
-        content: 'email: ';
-        font-weight: bold;
-      }
-      margin-bottom: 0.5rem;
+      // &::before{
+      //   content: 'email: ';
+      //   font-weight: bold;
+      // }
+      // margin-bottom: 0.5rem;
+
+      font-size: 22px;
+      font-weight: bold;
+      font-family: 'Work Sans', sans-serif;
     }
 
     .desktop-email{
@@ -148,17 +191,21 @@
       @media only screen and (min-width : 1200px){
         text-align: left;
       }
-
       text-align: center;
     }
-
-
-
   }
-
 }
 .sub-footer{
-  width: 80%;
-  margin: 2rem auto;
-  text-align: center;
+
+  font-size: 14px;
+  // margin: 2rem auto;
+
+  background-color: #9fd9c5;
+  .content{
+    padding: 53px 0 53px;
+    margin: 0 auto;
+    text-align: center;
+    width: 50%;
+
+  }
 }
