--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans:400,400i,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:700&display=swap');
+
 html {
   // background-color: lavenderblush;
   // margin: 0;
@@ -71,7 +73,7 @@ a:hover{
 }
 @media (min-width: 1200px) {
   .narrow-container {
-    width: 970px;
+    width: 1100px;
   }
 }
 
@@ -114,16 +116,20 @@ a:hover{
 .content-footer{
   color: black;
   // text-decoration: underline;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-family: 'Work Sans';
+  font-weight: bold;
   position: relative;
+  margin-top: 21px;
+  // display: inline-block;
 
   &::after{
     content: '';
-    border-bottom: 2px solid black;
-    width: 250px;
+    border-bottom: 6px solid black;
+
+    width: 100%;
     position: absolute;
-    bottom: 0;
+    top: 25px;
     left: 0;
   }
 }
