--- a/src/styles/practiceAreas.scss
+++ b/src/styles/practiceAreas.scss
@@ -1,12 +1,14 @@
-.practice-areas{
-  margin-top: 3rem;
+#practice-areas-id{
+  // margin-top: 3rem;
+  background-image: linear-gradient(to bottom, #415169, #d4e8dc);
+  padding-bottom: 202px;
+
   .section-header{
-    font-size: 3rem;
+    font-size: 42px;
+    color: #9fd9c5;
+    padding: 145px 0 45px;
   }
-  .section-subheader{
-    font-size: 2rem;
-    margin-bottom: 2rem;
-  }
+
 
   a.p-area:hover{
     text-decoration: none;
@@ -14,30 +16,54 @@
 
   .box{
     display: flex;
-    margin-bottom: 2rem;
+    margin-bottom: 55px;
     flex-wrap: wrap;
     flex-direction: row;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+
 
     .text{
       flex: 1;
-      background-color: #F2F1EB;
-      padding: 1rem;
+      align-items: flex-end;
+      display: flex;
+      flex-wrap: wrap;
+
+      align-items: center;
+      background-color: white;
+      padding: 42px;
+      // justify-content: flex-end;
       .header{
-        margin-bottom: 1rem;
+        flex: 0 0 100%;
+        // height: 33.33%;
+        // margin-bottom: 1rem;
+        font-size: 22px;
+        line-height: 26px;
 
       }
       .body{
-        font-size: 1.2rem;
+        flex: 0 0 100%;
+        // height: 33.33%;
+        font-size: 18px;
+        line-height: 24px;
         min-width: 300px;
+
         margin-bottom: 1rem;
       }
 
-      .link{
-        text-transform: uppercase;
-        font-family: 'Work Sans', sans-serif;
-        font-weight: bold;
-        text-decoration: underline;
+      .content-footer{
+        flex: 0 0 100%;
+        // height: 33.33%;
+        // display: flex;
+        // align-self: flex-end;
+        font-size: 18px;
+        &::after{
+          width: 110px;
+        }
+        // margin-bottom: 52px;
+
       }
+
 
     }
     .image{
