--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,6 +1,6 @@
 .contact{
   text-align: center;
-  margin-top: 2rem;
+  // margin-top: 2rem;
   margin-bottom: 2rem;
   background-color: black;
   padding: 120px 0 120px;
